---
source: reflectapi-demo/tests/run/main.rs
expression: pretty
snapshot_kind: text
---
HTTP/1.1 200 OK

content-length: 1
content-type: application/msgpack

{}


HTTP/1.1 200 OK

content-length: 1
content-type: application/msgpack
traceparent: blah

{}


HTTP/1.1 200 OK

content-length: 98
content-type: application/msgpack
traceparent: blah

{
  "cursor": "255",
  "items": [
    {
      "age": 1,
      "kind": {
        "breed": "labrador",
        "type": "dog"
      },
      "name": "Bobby",
      "updated_at": "2024-01-01T00:00:00Z"
    }
  ]
}
